// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TextDismissableBar should match snapshot 1`] = `
<AnnouncementBar
  color=""
  extraProp="test"
  handleClose={[Function]}
  message={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p class=\\"markdown__paragraph-inline\\">sample text</p>",
        }
      }
    />
  }
  onDismissal={[MockFunction]}
  showCloseButton={true}
  textColor=""
  type="critical"
/>
`;

exports[`components/TextDismissableBar should match snapshot, with an internal and an external link 1`] = `
<AnnouncementBar
  color=""
  extraProp="test"
  handleClose={[Function]}
  message={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p class=\\"markdown__paragraph-inline\\">A <a class=\\"theme markdown__link\\" href=\\"http://testurl.com/admin_console/\\" rel=\\"noreferrer\\" data-link=\\"/admin_console/\\">link</a> with an internal url and a <a class=\\"theme markdown__link\\" href=\\"http://other-url.com/admin_console/\\" rel=\\"noreferrer\\" target=\\"_blank\\">link</a> with an external url</p>",
        }
      }
    />
  }
  onDismissal={[MockFunction]}
  showCloseButton={true}
  textColor=""
  type="critical"
/>
`;

exports[`components/TextDismissableBar should match snapshot, with an internal url 1`] = `
<AnnouncementBar
  color=""
  extraProp="test"
  handleClose={[Function]}
  message={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p class=\\"markdown__paragraph-inline\\">A <a class=\\"theme markdown__link\\" href=\\"http://testurl.com/admin_console/\\" rel=\\"noreferrer\\" data-link=\\"/admin_console/\\">link</a> with an internal url</p>",
        }
      }
    />
  }
  onDismissal={[MockFunction]}
  showCloseButton={true}
  textColor=""
  type="critical"
/>
`;

exports[`components/TextDismissableBar should match snapshot, with ean external url 1`] = `
<AnnouncementBar
  color=""
  extraProp="test"
  handleClose={[Function]}
  message={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p class=\\"markdown__paragraph-inline\\">A <a class=\\"theme markdown__link\\" href=\\"http://otherurl.com/admin_console/\\" rel=\\"noreferrer\\" target=\\"_blank\\">link</a> with an external url</p>",
        }
      }
    />
  }
  onDismissal={[MockFunction]}
  showCloseButton={true}
  textColor=""
  type="critical"
/>
`;

exports[`components/TextDismissableBar should match snapshot, with link but without siteURL 1`] = `
<AnnouncementBar
  color=""
  extraProp="test"
  handleClose={[Function]}
  message={
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p class=\\"markdown__paragraph-inline\\">A <a class=\\"theme markdown__link\\" href=\\"http://testurl.com/admin_console/\\" rel=\\"noreferrer\\" target=\\"_blank\\">link</a></p>",
        }
      }
    />
  }
  onDismissal={[MockFunction]}
  showCloseButton={true}
  textColor=""
  type="critical"
/>
`;
